Fix edge of swiper slide cutting off in small viewports

--- a/app/components/carousel/carousel.module.scss
+++ b/app/components/carousel/carousel.module.scss
@@ -6,4 +6,5 @@
 
 .image {
   object-fit: cover;
+  width: 10px;
 }
